# verdict

./: .gitignore  .travis.yml  README  README.md  stack.yaml
verdict/: verdict.cabal
verdict-db/: verdict-db.cabal
verdict-db/src/Verdict/: DB.hs
verdict-db/src/Verdict/DB/: Internal.hs
verdict-db/test/Verdict/: DBSpec.hs
verdict-html/: verdict-html.cabal
verdict-html/src/Verdict/: Html.hs
verdict-html/src/Verdict/Html/: Internal.hs
verdict-json/: verdict-json.cabal
verdict-json/examples/: Example.hs
verdict-json/src/Verdict/: JSON.hs
verdict-json/src/Verdict/JSON/: Class.hs  Generic.hs  Internal.hs  TH.hs  Types.hs
verdict-json/test/Verdict/: JSONSpec.hs
verdict-json/test/Verdict/JSON/: SpecTypes.hs
verdict-quickcheck/: verdict-quickcheck.cabal
verdict-quickcheck/src/Verdict/: QuickCheck.hs
verdict/examples/: Infer.lhs  Tutorial.lhs
verdict/src/: Verdict.hs
verdict/src/Verdict/: Class.hs  Failure.hs  Generic.hs  Logic.hs  Types.hs  Val.hs
verdict/src/Verdict/Base/Internal/: Monoid.hs
verdict/test/: VerdictSpec.hs
