name:                verdict-html
version:             0.0.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Julian K. Arni
maintainer:          jkarni@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Verdict.Html
  other-modules:       Verdict.Html.Internal
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
                     , http-api-data == 0.2.*
                     , verdict
                     , text == 1.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
