name:                verdict-json
version:             0.0.0.0
synopsis:            JSON instances and JSON Schema for verdict
description:
  DO NOT USE! Unstable, not thoroughly tested.
license:             BSD3
license-file:        LICENSE
author:              Julian K. Arni
maintainer:          jkarni@gmail.com
copyright:           (c) Julian K. Arni
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Verdict.JSON
  ghc-options:         -Wall
  other-modules:       Verdict.JSON.Class
                     , Verdict.JSON.Types
  default-extensions:  DeriveFunctor
                     , DeriveGeneric
                     , DeriveDataTypeable
                     , TypeOperators
                     , MultiParamTypeClasses
                     , DataKinds
                     , FunctionalDependencies
                     , PolyKinds
                     , ScopedTypeVariables
                     , FlexibleInstances
                     , FlexibleContexts
                     , TypeFamilies
  build-depends:       base >=4.8 && <4.9
                     , aeson
                     , verdict == 0.0.*
                     , containers
                     , text
                     , unordered-containers
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Verdict.JSONSpec
  default-extensions:  DeriveAnyClass
                     , DeriveFunctor
                     , DeriveGeneric
                     , TypeOperators
                     , MultiParamTypeClasses
                     , DataKinds
                     , FunctionalDependencies
                     , PolyKinds
                     , ScopedTypeVariables
                     , FlexibleInstances
                     , FlexibleContexts
                     , TypeFamilies
  build-depends:       base == 4.*
                     , aeson >= 0.10
                     , containers
                     , unordered-containers
                     , vector
                     , verdict
                     , verdict-json
                     , hspec == 2.*

executable Example
  buildable:           False
  main-is:             Example.hs
  hs-source-dirs:      examples
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.9
                     , verdict
                     , verdict-json
                     , containers
                     , aeson
  default-language:    Haskell2010
