name:                verdict
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Julian K. Arni
maintainer:          jkarni@gmail.com
copyright:           (c) Julian K. Arni
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Verdict
  other-modules:       Verdict.Class
                     , Verdict.Types
                     , Verdict.Logic
                     , Verdict.Val
  default-extensions:  TypeOperators
                     , MultiParamTypeClasses
                     , DataKinds
                     , FunctionalDependencies
                     , PolyKinds
                     , ScopedTypeVariables
                     , FlexibleInstances
                     , FlexibleContexts
                     , TypeFamilies
  build-depends:       base >=4.7 && <4.9
                     , mtl
                     , text
                     , generics-sop
                     , reflection
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable tutorial
  main-is:             Tutorial.lhs
  ghc-options:         -Wall
  hs-source-dirs:      examples
  build-depends:       base >=4.7 && <4.9
                     , verdict
                     , text
  default-language:    Haskell2010
