name:                verdict
version:             0.0.0.0
synopsis:            Validation framework
description:
  DO NOT USE! Unstable, not thoroughly tested.
license:             BSD3
license-file:        LICENSE
author:              Julian K. Arni
maintainer:          jkarni@gmail.com
copyright:           (c) Julian K. Arni
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  include/*.h

library
  exposed-modules:     Verdict
  other-modules:       Verdict.Class
                     , Verdict.Failure
                     , Verdict.Types
                     , Verdict.Logic
                     , Verdict.Val
  default-extensions:  TypeOperators
                     , MultiParamTypeClasses
                     , DataKinds
                     , DefaultSignatures
                     , FunctionalDependencies
                     , PolyKinds
                     , ScopedTypeVariables
                     , FlexibleInstances
                     , FlexibleContexts
                     , TypeFamilies
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveDataTypeable
  build-depends:       base >=4.7 && <4.9
                     , mtl
                     , transformers
                     , text
                     , cond == 0.4.*
                     , boolean-normal-forms == 0.0.0.*
                     , wl-pprint-text == 1.*
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  include-dirs:        include

test-suite spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
                       -fno-warn-unused-binds
                       -fno-warn-type-defaults
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       VerdictSpec
  default-extensions:  DeriveFunctor
                     , DeriveGeneric
                     , TypeOperators
                     , MultiParamTypeClasses
                     , DataKinds
                     , FunctionalDependencies
                     , PolyKinds
                     , ScopedTypeVariables
                     , FlexibleInstances
                     , FlexibleContexts
                     , TypeFamilies
  build-depends:       base == 4.*
                     , verdict
                     , hspec == 2.*

executable tutorial
  main-is:             Tutorial.lhs
  ghc-options:         -Wall -pgmL markdown-unlit
  hs-source-dirs:      examples
  build-depends:       base >=4.7 && <4.9
                     , verdict
                     , text
                     , markdown-unlit
  default-language:    Haskell2010
